--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
 		"dev": "./node_modules/.bin/gulp dev"
 	},
 	"dependencies": {
-		"@types/fs-extra": "^5.0.2",
 		"download": "^7.0.0",
 		"fs-extra": "^6.0.1",
+		"lodash": "^4.17.10",
 		"pouchdb": "^6.4.3",
 		"request": "^2.87.0",
 		"request-promise-native": "^1.0.5"
 	},
 	"devDependencies": {
+		"@types/fs-extra": "^5.0.2",
 		"@types/download": "^6.2.2",
+		"@types/lodash": "^4.14.109",
 		"@types/node": "^10.1.2",
 		"@types/pouchdb": "^6.3.2",
 		"gulp": "^3.9.1",
