--- a/package.json
+++ b/package.json
@@ -7,21 +7,25 @@
 		"dev": "./node_modules/.bin/gulp dev"
 	},
 	"dependencies": {
+		"@types/request": "^2.47.0",
 		"download": "^7.0.0",
 		"fs-extra": "^6.0.1",
 		"lodash": "^4.17.10",
+		"log-update": "^2.3.0",
 		"pouchdb": "^6.4.3",
 		"request": "^2.87.0",
+		"request-progress": "^3.0.0",
 		"request-promise-native": "^1.0.5"
 	},
 	"devDependencies": {
-		"@types/fs-extra": "^5.0.2",
 		"@types/download": "^6.2.2",
+		"@types/fs-extra": "^5.0.2",
 		"@types/lodash": "^4.14.109",
 		"@types/node": "^10.1.2",
 		"@types/pouchdb": "^6.3.2",
 		"gulp": "^3.9.1",
 		"gulp-typescript": "^4.0.2",
+		"progress-bar-formatter": "^2.0.1",
 		"typescript": "^2.8.3"
 	}
 }
