--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
 	"name": "minecraft-lib",
 	"version": "1.0.0",
 	"main": "index.js",
-	"license": "MIT",
+	"license": "AGPL-3.0",
 	"scripts": {
 		"dev": "./node_modules/.bin/gulp dev"
 	},
 	"dependencies": {
 		"@types/request": "^2.47.0",
-		"download": "^7.0.0",
+		"arch": "^2.1.1",
+		"co": "^4.6.0",
+		"download": "^7.1.0",
 		"fs-extra": "^6.0.1",
+		"hasha": "^3.0.0",
 		"lodash": "^4.17.10",
-		"log-update": "^2.3.0",
+		"p-all": "^1.0.0",
+		"p-progress": "^0.2.0",
 		"pouchdb": "^6.4.3",
 		"request": "^2.87.0",
 		"request-progress": "^3.0.0",
@@ -25,6 +29,7 @@
 		"@types/pouchdb": "^6.3.2",
 		"gulp": "^3.9.1",
 		"gulp-typescript": "^4.0.2",
+		"log-update": "^2.3.0",
 		"progress-bar-formatter": "^2.0.1",
 		"typescript": "^2.8.3"
 	}
